unpackaged/objects/ddcAssess__Entity_Assessment__c.object
<CustomObject>
    <fields>
        <fullName>ddcAssess__Assessment_Summary__c</fullName>
        <label>Assessment Summary</label>
        <referenceTo>ddcAssess__Assessment_Summary__c</referenceTo>
        <relationshipLabel>Entity Assessments</relationshipLabel>
        <relationshipName>Entity_Assessments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ddcAssess__Different__c</fullName>
        <formula>ddcAssess__Matched__c - ddcAssess__In_Sync__c -  ddcAssess__Inactive__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Different</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddcAssess__Different_pcnt__c</fullName>
        <formula>IF(ddcAssess__Matched__c &gt; 0,ddcAssess__Different__c / ddcAssess__Matched__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Different %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ddcAssess__Duplicate__c</fullName>
        <label>Duplicate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddcAssess__Entity_Type__c</fullName>
        <label>Entity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ddcAssess__Error_Count__c</fullName>
        <label>Error Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddcAssess__Error_Messages__c</fullName>
        <label>Error Messages</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ddcAssess__In_Sync__c</fullName>
        <label>In Sync</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddcAssess__In_Sync_pcnt__c</fullName>
        <formula>IF(ddcAssess__Matched__c &gt; 0, ddcAssess__In_Sync__c / ddcAssess__Matched__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In Sync %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ddcAssess__Inactive__c</fullName>
        <label>Inactive</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddcAssess__Inactive_pcnt__c</fullName>
        <formula>IF(ddcAssess__Matched__c &gt; 0, ddcAssess__Inactive__c / ddcAssess__Matched__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inactive %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ddcAssess__International__c</fullName>
        <description>Accounts located in areas not covered by Data.com</description>
        <label>International</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddcAssess__International_pcnt__c</fullName>
        <formula>IF(ddcAssess__Total__c &gt; 0, ddcAssess__International__c / ddcAssess__Total__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>International %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ddcAssess__Matched__c</fullName>
        <label>Matched</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddcAssess__Matched_pcnt__c</fullName>
        <formula>IF(ddcAssess__Total__c &gt; 0, ddcAssess__Matched__c / ddcAssess__Total__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Matched %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ddcAssess__Person__c</fullName>
        <description>Count of Person Accounts (for Account) or Personal Email addresses (Lead and Contact)</description>
        <label>Person</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddcAssess__Person_pcnt__c</fullName>
        <formula>IF(ddcAssess__Total__c &gt; 0, ddcAssess__Person__c / ddcAssess__Total__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Person %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ddcAssess__Personal_Email__c</fullName>
        <label>Personal Email</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddcAssess__Personal_Email_pcnt__c</fullName>
        <formula>IF(ddcAssess__Total__c &gt; 0, ddcAssess__Personal_Email__c / ddcAssess__Total__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Personal Email %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ddcAssess__Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddcAssess__Unmatched__c</fullName>
        <formula>ddcAssess__Total__c - ddcAssess__Matched__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unmatched</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddcAssess__Unmatched_pcnt__c</fullName>
        <formula>IF(ddcAssess__Total__c &gt; 0, ddcAssess__Unmatched__c / ddcAssess__Total__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unmatched %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Entity Assessment</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Entity Assessment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Entity Assessments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>